# base16

./: CHANGELOG  README.md  flake.nix  ppad-base16.cabal
bench/: Main.hs  Weight.hs
lib/Data/ByteString/: Base16.hs
test/: Main.hs
