cabal-version:      3.0
name:               ppad-base16
version:            0.1.0
synopsis:           Simple base16 encoding and decoding on bytestrings.
license:            MIT
license-file:       LICENSE
author:             Jared Tobin
maintainer:         jared@ppad.tech
category:           Cryptography
build-type:         Simple
tested-with:        GHC == 9.8.1
extra-doc-files:    CHANGELOG
description:
  Simple base16 (hexadecimal) encoding and decoding on bytestrings.

source-repository head
  type:     git
  location: git.ppad.tech/base16.git

library
  default-language: Haskell2010
  hs-source-dirs:   lib
  ghc-options:
      -Wall
  exposed-modules:
      Data.ByteString.Base16
  build-depends:
      base >= 4.9 && < 5
    , bytestring >= 0.9 && < 0.13

test-suite base16-tests
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             Main.hs

  ghc-options:
    -rtsopts -Wall -O2

  build-depends:
      base
    , base16-bytestring
    , bytestring
    , ppad-base16
    , tasty
    , tasty-hunit
    , tasty-quickcheck

benchmark base16-bench
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      bench
  main-is:             Main.hs

  ghc-options:
    -rtsopts -O2 -Wall

  build-depends:
      base
    , base16
    , base16-bytestring
    , bytestring
    , criterion
    , ppad-base16

benchmark base16-weigh
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      bench
  main-is:             Weight.hs

  ghc-options:
    -rtsopts -O2 -Wall

  build-depends:
      base
    , base16
    , base16-bytestring
    , bytestring
    , criterion
    , ppad-base16
    , weigh

